--- a/{{ cookiecutter.repo_name }}/Dockerfile
+++ b/{{ cookiecutter.repo_name }}/Dockerfile
@@ -1,6 +1,6 @@
 FROM tomcat
 
-ADD demo/src/main/webapp /usr/local/tomcat/webapps/webapp
+ADD src/main/webapp /usr/local/tomcat/webapps/webapp
 
 CMD ["catalina.sh", "run"]
 EXPOSE 8080
